src/snapshots/tests__tests::test_variable.snap
---
created: "2019-06-11T12:13:10.617848275Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Variable(
    "X"
)
