src/snapshots/tests__thf_annotated-3.snap
---
source: src/tests.rs
expression: parsed
---
ThfAnnotated {
    name: AtomicWord(
        Lower(
            LowerWord(
                "test",
            ),
        ),
    ),
    role: Axiom,
    formula: Logic(
        Unitary(
            Atomic(
                Defined(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    annotations: Annotations(
        Some(
            (
                Source(
                    Data(
                        Atomic(
                            Lower(
                                LowerWord(
                                    "unknown",
                                ),
                            ),
                        ),
                    ),
                ),
                OptionalInfo(
                    None,
                ),
            ),
        ),
    ),
}
