src/snapshots/tests__thf_apply_formula.snap
---
source: src/tests.rs
expression: parsed
---
ThfApplyFormula(
    [
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "d",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
