src/snapshots/tests__thf_apply_type.snap
---
source: src/tests.rs
expression: parsed
---
ThfApplyType(
    ThfApplyFormula(
        [
            Unitary(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "c",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            Unitary(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "d",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
