src/snapshots/tests__thf_atom_typing-3.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Typing(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            ThfUnitaryType(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "t",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
