src/snapshots/tests__thf_atom_typing.snap
---
source: src/tests.rs
expression: parsed
---
Typing(
    Constant(
        Constant(
            Functor(
                Lower(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
    Unitary(
        ThfUnitaryType(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "t",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
