src/snapshots/tests__thf_atomic_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Defined(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_constant",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
